edition = "2023";

package signals;

option java_multiple_files = true;
option java_package = "com.verlumen.tradestream.signals";

// Represents a trading signal generated by the Strategy Engine
message TradeSignal {
  enum TradeSignalType {
    NONE = 0;       // No action required
    BUY = 1;        // Enter long position
    SELL = 2;       // Exit long position or enter short
    STOP_LOSS = 3;  // Forced exit due to stop loss
    ERROR = 4;      // Signal indicates an error condition
  }

  // Required fields
  TradeSignalType type = 1;
  int64 timestamp = 2;         // Unix timestamp in milliseconds
  
  // Optional fields
  double price = 3;            // Price at which to execute the trade
  double size = 4;            // Size of the position to take
  string strategy_name = 5;    // Name of strategy generating signal
  string reason = 6;          // Human readable reason for signal

  // Risk management fields
  double stop_loss = 7;       // Stop loss price level
  double take_profit = 8;     // Take profit price level
  
  // Metadata
  map<string, string> metadata = 9;  // Additional strategy-specific metadata
}
